small formatting change

--- a/projects/chamber/styles/medium.css
+++ b/projects/chamber/styles/medium.css
@@ -59,6 +59,7 @@
         grid-row: 1/2;
         display: flex;
         justify-content: center;
+        justify-self: self-start;
     }
 
     #Content-2 {
