--- a/projects/chamber/styles/base.css
+++ b/projects/chamber/styles/base.css
@@ -128,10 +128,53 @@ nav ul.open {display: block;}
 #hamburgerBtn.open span:nth-child(2) {display: block;}
 
 main div {
-    background-color: #1AE6DA;
+    background-color: #000000;
     margin: 10px;
     padding: 10px;
-    height: 150px;
+    height: auto;
+    color: #1AE6DA;
+    z-index: 0;
+}
+
+main div p {
+    text-align: center;
+    padding: 10px;
+    text-shadow: 1px 1px 5px #fffb00;
+    color: #1AE6DA;
+    position: relative;
+    z-index: 1;
+}
+
+#hero-box {
+    padding: 0;
+    position: relative;
+    overflow: hidden;
+}
+
+#hero-box p {
+    position: absolute;
+    background-color:#a9ff14b3;
+    padding: 5px; 
+    margin: 10px; 
+    color:#2a0047;
+}
+
+#chamber-button {
+    background-color: #000000;
+    position: absolute;
+    color:#1AE6DA;
+    bottom: 10px; 
+    right: 10px;
+    padding: 10px;
+    font-size: 14px;
+    border-radius: 12px; 
+}
+
+#hero-img {
+    width: 100%;
+    height: auto;
+    z-index: -1;
+    margin-bottom: -1%;
 }
 
 #spotlight-box {
@@ -142,7 +185,7 @@ main div {
 #spotlight-1, #spotlight-2 {
     border-width: 2px;
     border: solid;
-    border-color:rgba(0, 0, 0, 0.5);
+    border-color:#1ae6d881;
     margin: 0px;
 }
 
@@ -152,6 +195,16 @@ main div {
 
 #join-box {
     display: none;
+}
+
+#join-button {
+    color:#2a0047;
+    background-color: #a9ff14;
+    font-size: 25px;
+    width: 40%;
+    height: 30%;
+    border-radius: 5px;
+    align-self: center;
 }
 
 footer hr {
