--- a/projects/chamber/styles/large.css
+++ b/projects/chamber/styles/large.css
@@ -80,6 +80,10 @@
         z-index: 5;
     }
 
+    #join-button{
+        font-size: 18px;
+    }
+
     footer { 
         grid-template-columns: 20% 40% 20% 20%;
         grid-template-rows: 70% 1% 30%;
