--- a/projects/chamber/styles/medium.css
+++ b/projects/chamber/styles/medium.css
@@ -9,7 +9,7 @@
 
     main {
         display: grid;
-        grid-template-rows: 200px 200px 200px 200px;
+        grid-template-rows: 200px 200px 200px 200px 200px;
         grid-template-columns: 1fr 1fr 1fr;
     }
 
@@ -39,13 +39,20 @@
     }
 
     #event-box {
-        grid-row: 4/5;
+        grid-row: 5/6;
         grid-column: 1/3;
     }
 
     #weather-box {
-        grid-row: 4/5;
+        grid-row: 5/6;
         grid-column: 3/5;
+    }
+
+    #join-box {
+        text-align: center;
+        display: block;
+        grid-row: 4/5;
+        grid-column: 1/5;
     }
 
     footer {
