--- a/projects/chamber/styles/medium.css
+++ b/projects/chamber/styles/medium.css
@@ -105,3 +105,12 @@
 
 }
  
+
+@media only screen and (min-width: 50rem) {
+    #hamburgerBtn.closed {
+        position: absolute;
+        top: 65px;
+        right: 20px; 
+        background-color: black;
+    }
+}
