--- a/projects/chamber/styles/medium.css
+++ b/projects/chamber/styles/medium.css
@@ -9,7 +9,7 @@
 
     main {
         display: grid;
-        grid-template-rows: 200px 200px 200px 200px 200px;
+        grid-template-rows: 200px auto auto 150px auto;
         grid-template-columns: 1fr 1fr 1fr;
     }
 
