--- a/projects/chamber/styles/base.css
+++ b/projects/chamber/styles/base.css
@@ -319,7 +319,7 @@ footer {
 
 #discovery-main { 
     display: grid; 
-    grid-template-rows: 1fr * 10;
+    grid-template-rows: auto auto auto auto auto auto auto auto auto auto;
     grid-template-columns: 1fr;
 }
 
@@ -328,8 +328,6 @@ footer {
     margin: 10px 50px 10px 50px;
     border-radius: 70px 70px 0px 0px;
     outline: 7px solid #2a0047;
-    text-align: left;
-    padding-left: 25%;
 }
 
 #discovery-1 {
