--- a/projects/chamber/styles/large.css
+++ b/projects/chamber/styles/large.css
@@ -6,7 +6,7 @@
 
     nav button {display: none;}
 
-    nav ul#primaryNav{
+    nav ul.primaryNav{
         display: flex;  
         border-left: 1px solid rgba(0,0,0,0.3)
     }
