--- a/projects/chamber/styles/base.css
+++ b/projects/chamber/styles/base.css
@@ -236,6 +236,18 @@ main div p {
     margin: 5px;
 }
 
+.bottom-row a {
+    color:#e61a1a;
+}
+
+.bottom-row a:visited {
+    color: rgb(255, 0, 217);
+}
+
+.bottom-row a:hover {
+    color: rgb(26, 255, 0);
+}
+
 #join-box {
     display: none;
 }
@@ -298,12 +310,16 @@ footer {
 
 #map-link a{
     text-decoration: none;
+    color: #e61a1a;
 }
 
 #map-link a:visited{
     color: rgb(255, 0, 217);
 }
 
+#map-link a:hover {
+    color: rgb(26, 255, 0);
+}
 /* !  Discover page */
 
 
