--- a/projects/chamber/styles/large.css
+++ b/projects/chamber/styles/large.css
@@ -23,7 +23,7 @@
 
     main {
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-rows: auto auto auto;
     }
 
     #event-box {
