--- a/projects/chamber/styles/base.css
+++ b/projects/chamber/styles/base.css
@@ -509,3 +509,64 @@ form {
     padding: 5%;
     background-color:#cafffb;
 }
+
+/* ! Directory page */
+
+#directory-menu {
+    padding: 30px; 
+    border-radius: 5px;
+    margin: 5%; 
+}
+
+#directory-menu button {
+    width: 80px;
+    height: 80px;
+    margin: 20px; 
+    box-shadow: 0px 0px 20px #ffffff;
+    
+}
+
+.list {
+    margin-top: 30px; 
+    margin-bottom: 70px; 
+}
+
+.list li {
+    list-style-type: none;
+    background-color: #2a0047;
+    color: #a9ff14; 
+    padding: 2%;
+    padding: 30px; 
+}
+
+.list li:nth-child(odd) {
+    background-color: #000000;
+    color: #1AE6DA; 
+}
+
+
+.list li h2:first-child,
+.list li h2:nth-child(2),
+.list li h2:nth-child(3) {
+  margin-bottom: 15px;
+}
+
+.list li h2 {
+    margin: 0px;
+}
+
+/* ! grid box */
+
+.grid div {
+    padding: 8%; 
+    box-shadow: 0px 0px 20px #23008b;
+    margin: 10%;
+}
+
+.grid div img {
+    width: 50%; 
+    height: auto;
+}
+
+
+
