--- a/projects/chamber/styles/large.css
+++ b/projects/chamber/styles/large.css
@@ -177,4 +177,31 @@
         justify-content: center;
     }
 
+    /* ! Directory page */
+
+    .list li {
+        display: grid;
+        grid-template-columns: 25% 30% 10% 35%;
+    }
+
+    .list li h2:first-child {
+        grid-column: 1/2;
+    }
+
+    .list li h2:nth-child(2) {
+        grid-column: 2/3;
+    }
+
+    .list li h2:nth-child(3) {
+        grid-column: 3/4;
+    }
+
+    .list li h2:nth-child(4) {
+        grid-column: 4/5;
+    }
+
+    .grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+
 }
