--- a/projects/chamber/styles/base.css
+++ b/projects/chamber/styles/base.css
@@ -669,5 +669,26 @@ form {
     height: 150px;
 }
 
+/* ! 404 page */
+
+#main-404 a img {
+    width: 80%; 
+    margin: 0% 10% 10% 10%;
+}
+
+#main-404 {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+}
+
+#main-404 p {
+    margin: 5%; 
+}
+
+#main-404 h2:nth-child(4) {
+    margin-bottom:15%;
+}
+
 
 
