--- a/projects/chamber/styles/medium.css
+++ b/projects/chamber/styles/medium.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 35rem) {
     #header-text {
-        padding-right: 20%;
+        padding-right: 0px;
     }
 
     main div {
@@ -11,6 +11,32 @@
         display: grid;
         grid-template-rows: 200px auto auto 150px auto;
         grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .top-box {
+        display: flex;
+        justify-content: space-between;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .top-box .icons.closed {
+        margin-right: 100px; 
+    }
+
+    .top-box p {
+        font-size: 26px;
+    }
+    
+    .top-box h2 {
+        font-size: 16px; 
+    }
+
+    .hamburgerBtn.closed {
+        position: absolute;
+        top: 5px;
+        right: 20px; 
+        background-color: black;
     }
 
     #hero-box {
