--- a/projects/Final project/styles/base.css
+++ b/projects/Final project/styles/base.css
@@ -15,6 +15,18 @@ h1 {
     width: 50%;
 }
 
+#planning-document-body {
+    background-color: white;
+}
+
+#planning-document-body main {
+    background-color: white;
+}
+
+#planning-document-body h1 {
+    color:#563306;
+}
+
 
 #planning-document-body header {
     background-color:#bbfffc;
@@ -90,8 +102,9 @@ ul {
 }
 
 header {
-    background-color: #563306;
+    background-color: #a4620b;
     text-align: center;
+    margin-bottom: 100px;
 }
 
 .logo {
@@ -119,11 +132,11 @@ header {
     padding: 10px; /* Add padding inside the border */
     text-decoration: none;
     font-size: 25px;
-    color: #bbfffc;
+    color: #00fff2;
 }
 
 .primaryNav li a:hover{
-    background-color: #941818;
+    background-color: #ff5353;
     color: black;
 }
 
@@ -136,4 +149,128 @@ header {
     width: 50px; 
     padding: 30px 8px; 
 }
+body {
+    background-color: #941818;
+}
 
+main {
+    background-color: #941818;
+}
+
+main div {
+    background-color: #563306;
+    color:#87f006;
+    padding: 5%; 
+    margin: 3%;
+    text-align: center;
+    border: 1px solid #bbfffc;
+    border-radius: 10px;
+}
+
+main div:hover {
+    background-color: #6b4008;
+}
+
+main div div {
+    border: 2px solid #49918e;
+}
+
+main div img {
+    width: 75%;
+}
+
+#weather-icon {
+    width: auto;
+}
+
+main div p {
+    text-align: left;
+}
+
+h1 {
+    font-size: 60px;
+    color:#bbfffc;
+}
+
+#weather-div {
+    text-align: center;
+}
+
+#top-weather {
+    display: flex;
+    flex-direction: row;
+    border: none;
+    font-size: 22px;
+    background-color: #03009c2c;
+    align-items: center;
+    margin-right: 10px; 
+    justify-content: center;
+    padding: 3% 0%;
+    width: 50%;
+    margin-left: 25%;
+}
+
+#top-weather img {
+    margin-right: 30px;
+}
+
+#middle-weather {
+    border: none;
+    background-color: #00000000;
+    padding-bottom: 60px;
+}
+
+#middle-weather hr {
+    width: 50%;
+}
+
+#humidity {
+    margin-bottom: 80px;
+}
+
+#weather-section div {
+    display: flex; 
+    flex-direction: row;
+}
+
+#weather-section div  p {
+    padding: 0px 20px;
+    margin: 0px;
+}
+
+#drinks-button {
+    background-color: #002501;
+    color: #bbfffc;
+    padding: 5px 10px;
+    border-color: #bbffc6;
+}
+
+#drinks-button:hover {
+    background-color: #ff5353;
+    color: #000000;
+    padding: 5px 10px;
+    border-color: #bbffc6;
+}
+
+footer {
+    margin-top: 100px; 
+    background-color: #a4620b;
+    text-align: center;
+    padding: 30px;
+    color:#bbffc6;
+}
+
+footer hr {
+    width: 50%;
+    height: 2px;
+    background-color: #87f006;
+    margin: 30px auto;
+}
+
+footer a {
+    color: white;
+}
+
+footer a:hover {
+    color: #000000;
+}
