--- a/projects/Final project/styles/base.css
+++ b/projects/Final project/styles/base.css
@@ -283,6 +283,13 @@ footer {
     color:#bbffc6;
 }
 
+#time-stamp-div {
+    margin-top: 70px;
+    background-color: black;
+    color: white;
+    padding: 1px; 
+}
+
 #number-div {
     padding: 15px;
     margin: 12px;
