--- a/projects/Final project/styles/large.css
+++ b/projects/Final project/styles/large.css
@@ -62,6 +62,14 @@
         margin-right: 20%; 
     }
 
+    #footer-box {
+        margin-right: 0px; 
+    }
+
+    #time-stamp-div {
+        margin-right: 0px; 
+    }
+
     /* ! Fresh */
 
     #fresh-main div article div {
