--- a/projects/final-project/styles/medium.css
+++ b/projects/final-project/styles/medium.css
@@ -155,10 +155,6 @@
         justify-content: space-evenly;
     }
 
-    footer h1 {
-        margin-left: 5%; 
-    }
-
     footer div {
         margin-right: 5%; 
     }
@@ -170,6 +166,10 @@
 
     #time-stamp-div {
         margin-top: 0px; 
+    }
+
+    h2 {
+        margin-left: 5%;
     }
 
     /* ! Fresh */
@@ -188,6 +188,6 @@
     }
 
     h2 {
-        margin: 3%; 
+        margin-left: 3%; 
     }
 }
